--- a/app/assets/scss/components/_page.scss
+++ b/app/assets/scss/components/_page.scss
@@ -7,6 +7,7 @@
     height: 100%;
     position: fixed;
     top: 0;
+    z-index: 1;
 }
 
 .page-overlay {
